# reqwest-openai-tracing

./: .gitignore  CHANGELOG.md  Cargo.toml  GITHUB_SECRETS_SETUP.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.github/: BRANCH_PROTECTION_SETUP.md  MERGE_SETTINGS.md  README.md  ruleset.json  settings.yml
.github/workflows/: release-plz.yml  test_suite.yml
examples/: basic.rs  context.rs  debug_otlp_export.rs  langfuse_auth.rs  test_langfuse_trace.rs  with_langfuse.rs
src/: attributes.rs  context.rs  http_client.rs  langfuse.rs  lib.rs  middleware.rs
